[package]
name = "webacld"
version = "0.1.0"
edition = "2021"

[dependencies]
deku = "0.18"
tiny_http = "0.12"
base64 = "0.22"
getrandom = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chumsky = "0.9"
libc = "0.2"
threadpool = "1"
ascii = "1"
biscotti = "0.3"
clap = { version = "4", features = ["derive"] }
slog = { version = "2" }
slog-term = "2"
slog-async = "2"
regex = "1"
